--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.3.6",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "@nuxtjs/axios": "^5.3.6"
+    "firebase": "^7.5.1",
+    "nuxt": "^2.0.0",
+    "nuxt-fire": "^3.1.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
@@ -25,9 +27,9 @@
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
-    "eslint": "^6.1.0",
+    "eslint": "^6.7.2",
     "eslint-plugin-nuxt": ">=0.4.2",
-    "jest": "^24.1.0",
+    "jest": "^24.9.0",
     "node-sass": "^4.13.0",
     "nodemon": "^1.18.9",
     "sass-loader": "^8.0.0",
